# django-ecommerce-project

./: .coverage  .czrc  .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: .coverage  .coveragerc  conftest.py  manage.py  pytest.ini
src/account/: forms.py  models.py  urls.py  views.py
src/apps/account/: forms.py  models.py  views.py
src/apps/account/tests/: test_account_forms.py  test_account_models.py
src/apps/basket/: basket.py  urls.py  views.py
src/apps/orders/: models.py  views.py
src/apps/payment/: backup.py  client.py  utils.py  views.py  worldline.py
src/apps/store/: admin.py  context_processors.py  models.py  urls.py  views.py
src/apps/store/tests/: test_store_models.py  test_store_views.py
src/basket/: basket.py  urls.py  views.py
src/basket/templates/basket/: summary.html
src/basket/tests/: test_views.py
src/core/: debug.py  settings.py  urls.py
src/orders/: models.py  urls.py  utils.py  views.py
src/orders/templates/orders/: order_cancelled.html  order_placed.html
src/payment/: admin.py  backup.py  forms.py  models.py  urls.py  utils.py  views.py  worldline.py
src/payment/templates/payment/: home.html  payment_failed.html  payment_success.html  (+1 more)
src/static/assets/: annie-spratt-YAEQXx5ITH0-unsplash.jpg:Zone.Identifier
src/store/: admin.py  context_processors.py  models.py  urls.py  views.py
src/store/tests/: test_models.py  test_views.py
src/templates/: layout.html
src/tests/: factories.py
src/tests/store/: test_store.py  test_store_view.py
src/theme/templates/: base.html
(+39 files in other folders)
